Fix styling on smaller screens

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,3 +1,4 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{background-color:#24292e}
 h1, h2, h3, a, .links{text-align:center;margin:30px;font-family:sans-serif;color:#fff}
+a{margin:0 5px}
